[package]
name = "rose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
rand = "^0.3"
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"
anyhow = "1.0.22"
rustls = "0.20.3"
quinn = "0.8.0"
serde_json = "1.0"
